--- a/scap/scap.cfg
+++ b/scap/scap.cfg
@@ -13,3 +13,8 @@ lock_file: /tmp/scap.mobileapps.lock
 
 [wmnet]
 git_server: tin.eqiad.wmnet
+
+[deployment-prep.eqiad.wmflabs]
+git_server: deployment-tin.deployment-prep.eqiad.wmflabs
+server_groups: default
+dsh_targets: betacluster
