--- a/scap/scap.cfg
+++ b/scap/scap.cfg
@@ -15,6 +15,7 @@ lock_file: /tmp/scap.mobileapps.lock
 git_server: tin.eqiad.wmnet
 
 [deployment-prep.eqiad.wmflabs]
+environment: beta
 git_server: deployment-tin.deployment-prep.eqiad.wmflabs
 server_groups: default
 dsh_targets: betacluster
