Switch to Scap3 config deploys
Change-Id: I079f89c02bfd47c60201b3f9b9d2229739e96df4
Depends-On: Ia6575b86b962c89ef288c472e5e7e25a375be1b4
Bug: T144598

--- a/scap/scap.cfg
+++ b/scap/scap.cfg
@@ -10,6 +10,7 @@ git_submodules: True
 service_name: mobileapps
 service_port: 8888
 lock_file: /tmp/scap.mobileapps.lock
+config_deploy: True
 
 [wmnet]
 git_server: tin.eqiad.wmnet
