Scap: Depool and repool MobileApps during restarts
Bug: T144602
Change-Id: I1fc6579c9a924a7b33adcfbf6420ecc7a30bca1a

--- a/scap/checks.yaml
+++ b/scap/checks.yaml
@@ -3,3 +3,11 @@ checks:
     type: nrpe
     stage: restart_service
     command: check_endpoints_mobileapps
+  depool:
+    type: command
+    stage: promote
+    command: depool-mobileapps
+  repool:
+    type: command
+    stage: restart_service
+    command: pool-mobileapps
