--- a/scap/scap.cfg
+++ b/scap/scap.cfg
@@ -6,6 +6,7 @@ ssh_user: deploy-service
 server_groups: canary, default
 canary_dsh_targets: target-canary
 dsh_targets: targets
+group_size: 2
 git_submodules: True
 service_name: mobileapps
 service_port: 8888
