--- a/scap/vars.yaml
+++ b/scap/vars.yaml
@@ -8,5 +8,5 @@ metrics_port: 8125
 # service
 port: 8888
 proxy:
-mwapi_uri: https://{{domain}}/w/api.php
+mwapi_uri: http://{{domain}}/w/api.php
 restbase_uri: http://localhost:7231
