--- a/scap/vars.yaml
+++ b/scap/vars.yaml
@@ -9,4 +9,5 @@ metrics_port: 8125
 port: 8888
 proxy:
 mwapi_uri: http://{{domain}}/w/api.php
+mw_resource_loader_uri: http://{{domain}}/w/load.php
 restbase_uri: http://localhost:7231
